[package]
name = "cat-pexeso"
version = "1.0.0"
description = "Cat Pexeso - Cute Cat Memory Game"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3" }

[dependencies]
tauri = { version = "2.0.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
